Addded support for all devices, able to pull data from the api. All features work as necessary, quick and simple way to view locationbased pictures.

--- a/Pixel/Info.plist
+++ b/Pixel/Info.plist
@@ -39,5 +39,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Needed to access location for your service.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Needed to access location for your service.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Needed to access location for your service.</string>
 </dict>
 </plist>
